added practice examples for the testing your first app to the overview and last lesson of the course

--- a/content/courses/testing-your-first-application/testing-what-isnt-there.mdx
+++ b/content/courses/testing-your-first-application/testing-what-isnt-there.mdx
@@ -37,6 +37,8 @@ it("does NOT display the footer or todo-list when there are no todos", () => {
 })
 ```
 
-# Practice:
+# Practice
 
-Write a new test that does the opposite of the test we just wrote. Instead of making sure something does not exist when there are no todo's, write a test that makes sure that the `<footer>` and **.todo-list** exist when there are todos.
+For additional practice checkout the **cypress/integration/practice/practice.spec.js** file. This file contains several tests, with helpful comments, to help you put into practice all of the concepts you have learned so far.
+
+Should you get stuck or need some help, all of the answers are provided within **cypress/integration/final/practice.spec.js**
