--- a/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
@@ -62,3 +62,9 @@ Testing is a mindset, so before we can begin to write tests for our app, we firs
 For example, since this is a todo application, one of the most important features should be adding todos. If a user is not able to add todos, the entire app is useless. Therefore, one of the first things we should test is that a user can add todos.
 
 In the next lesson, we will learn how to install Cypress and write our first test to make sure we can add a todo to the app.
+
+## Practice
+
+After completing all of the lessons in this tutorial, make sure to check out the **cypress/integration/practice/practice.spec.js** file. This file contains several tests, with helpful comments, to help you put into practice all of the concepts you will learn in this tutorial.
+
+Should you get stuck or need some help, all of the answers are provided within **cypress/integration/final/practice.spec.js**
