updated lessons with practice examples and links to the blog app

--- a/content/courses/advanced-cypress-concepts/important-cypress-methods-you-need-to-know.mdx
+++ b/content/courses/advanced-cypress-concepts/important-cypress-methods-you-need-to-know.mdx
@@ -104,3 +104,11 @@ it("all of the lesson cards on the section page have a status of 'Completed'", (
 In this example, we are looping through all of the lessons nested within the `section-steps` element.
 
 You can find out more about `.within()` on our [API docs page](https://docs.cypress.io/api/commands/within).
+
+## Practice
+
+If you would like to practice using some of these Cypress methods, we have created a special repo which can be found [here](https://github.com/cypress-io/cypress-realworld-testing-blog). The installation instructions are located in the **README.md** file.
+
+The practice file you are looking for can be found in **cypress/integration/Practice/cypress-methods.spec.js**.
+
+Should you get stuck or need some help, all of the answers are provided within **cypress/integration/Answers/cypress-methods.spec.js**
