--- a/content/courses/advanced-cypress-concepts/intercepting-network-requests.mdx
+++ b/content/courses/advanced-cypress-concepts/intercepting-network-requests.mdx
@@ -126,3 +126,11 @@ To learn more check out these resources in our docs:
 - [Network Requests](https://docs.cypress.io/guides/guides/network-requests)
 - [Intercept API docs](https://docs.cypress.io/api/commands/intercept)
 - [Stubs, Spies & Clocks](https://docs.cypress.io/guides/guides/stubs-spies-and-clocks)
+
+## Practice
+
+If you would like to practice intercepting Network Requests and working with the Network in general with Cypress, we have created a special repo which can be found [here](https://github.com/cypress-io/cypress-realworld-testing-blog). The installation instructions are located in the **README.md** file.
+
+The practice file you are looking for can be found in **cypress/integration/Practice/network-requests.spec.js**.
+
+Should you get stuck or need some help, all of the answers are provided within **cypress/integration/Answers/network-requests.spec.js**
