--- a/content/courses/cypress-fundamentals/cypress-is-just-javascript.mdx
+++ b/content/courses/cypress-fundamentals/cypress-is-just-javascript.mdx
@@ -51,3 +51,11 @@ it("comments on a transaction", function () {
     cy.visualSnapshot("Comment on Transaction");
   });
 ```
+
+## Practice
+
+If you would like to practice how to to use JavaScript in Cypress, we have created a special repo which can be found [here](https://github.com/cypress-io/cypress-realworld-testing-blog). The installation instructions are located in the **README.md** file.
+
+The practice file you are looking for can be found in **cypress/integration/Practice/just-javascript.spec.js**.
+
+Should you get stuck or need some help, all of the answers are provided within **cypress/integration/Answers/just-javascript.spec.js**
