--- a/content/courses/cypress-fundamentals/how-to-debug-failing-tests.mdx
+++ b/content/courses/cypress-fundamentals/how-to-debug-failing-tests.mdx
@@ -41,3 +41,11 @@ console.log("my custom message")
 Since Cypress runs in the browser, you have full access to all of the information from your browser's developer tools. This means you can use the same techniques and functionality you are used to using when debugging issues with your application code to debug your failing Cypress tests too.
 
 ![](/images/cypress-fundamentals/how-to-debug-failing-tests/browser-dev-tools.gif)
+
+## Practice
+
+If you would like to practice how to debug failing tests in Cypress, we have created a special repo which can be found [here](https://github.com/cypress-io/cypress-realworld-testing-blog). The installation instructions are located in the **README.md** file.
+
+The practice file you are looking for can be found in **cypress/integration/Practice/debug-failing-tests.spec.js**.
+
+Should you get stuck or need some help, all of the answers are provided within **cypress/integration/Answers/debug-failing-tests.spec.js**
