--- a/content/courses/advanced-cypress-concepts/building-the-right-cypress-commands.mdx
+++ b/content/courses/advanced-cypress-concepts/building-the-right-cypress-commands.mdx
@@ -66,3 +66,11 @@ describe("POST /login", function () {
   })
 })
 ```
+
+## Practice
+
+If you would like to practice how to build custom Cypress Commands, we have created a special repo which can be found [here](https://github.com/cypress-io/cypress-realworld-testing-blog). The installation instructions are located in the **README.md** file.
+
+The practice file you are looking for can be found in **cypress/integration/Practice/cypress-commands.spec.js**.
+
+Should you get stuck or need some help, all of the answers are provided within **cypress/integration/Answers/cypress-commands.spec.js**
