created apiLink markdown component to handle links for Cypress methods

--- a/content/courses/testing-your-first-application/installing-cypress-and-writing-our-first-test.mdx
+++ b/content/courses/testing-your-first-application/installing-cypress-and-writing-our-first-test.mdx
@@ -93,7 +93,7 @@ If we inspect the element with our browser's dev tools, we will notice that the 
 <input class="new-todo" placeholder="What needs to be done?" data-reactid=".0.0.1">
 ```
 
-Therefore we can `cy.get()` this element like so:
+Therefore we can <apiLink apiName="get" displayName="cy.get()" /> this element like so:
 
 ```js
 cy.get(".new-todo")
