--- a/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
@@ -37,6 +37,12 @@ yarn install
 
 Make sure to be using a version of Node that is `v.14` or higher and use [Yarn package manager](https://yarnpkg.com/).
 
+If you don't have Yarn installed, you can install it with this command:
+
+```bash
+npm install --global yarn
+```
+
 ![](/images/testing-your-first-application/todomvc-app-install-and-overview/Screen_Shot_2021-09-17_at_10.13.32_AM.png)
 
 Then to start the app:
