--- a/content/courses/testing-your-first-application/how-to-use-cypress-commands.mdx
+++ b/content/courses/testing-your-first-application/how-to-use-cypress-commands.mdx
@@ -130,6 +130,6 @@ it("should append new items to the bottom of the list", () => {
 })
 ```
 
-You will notice that our **.todo-count** is a `<span>` with multiple elements nested inside of it. The number is wrapped in a `<strong>` tag, and the words are wrapped in `<span>` tags. The `.contains()` method will find the appropriate text even though it may be nested in several different tags 🔥
+You will notice that our **.todo-count** is a `<span>` with multiple elements nested inside of it. The number is wrapped in a `<strong>` tag, and the words are wrapped in `<span>` tags. The <apiLink apiName="contains" displayName="cy.contains()" /> method will find the appropriate text even though it may be nested in several different tags 🔥
 
-In the above example, we use both `.should('contain')`, and `.contains()`. You can find out more info about `should` [here](https://docs.cypress.io/api/commands/should) and `contains` [here](https://docs.cypress.io/api/commands/contains).
+In the above example, we use both <apiLink apiName="should" displayName="cy.should()" />, and <apiLink apiName="contains" displayName="cy.contains()" />.
