--- a/content/courses/testing-your-first-application/setting-up-data-before-each-test.mdx
+++ b/content/courses/testing-your-first-application/setting-up-data-before-each-test.mdx
@@ -16,9 +16,9 @@ describe("React TodoMVC", () => {
 })
 ```
 
-Remember, the first thing we need to do is to tell Cypress to navigate to our app. Each `it()` function is a separate test, so for each new test we write, we have to specifically tell Cypress to `cy.navigate()` our application.
+Remember, the first thing we need to do is to tell Cypress to <apiLink apiName="visit" displayName="cy.visit()" /> to our app. Each `it()` function is a separate test, so for each new test we write, we have to specifically tell Cypress to <apiLink apiName="visit" displayName="cy.visit()" /> our application.
 
-You may start to see a potential annoyance here. Granted, since we only have two tests right now, this is not that big of a deal, but what if our test file had several tests. This would mean that within every single `it()`, we would have to specifically tell Cypress to `cy.navigate()` to our app for each test, which is very repetitive and annoying. There is a better way, fortunately.
+You may start to see a potential annoyance here. Granted, since we only have two tests right now, this is not that big of a deal, but what if our test file had several tests. This would mean that within every single `it()`, we would have to specifically tell Cypress to navigate to our app for each test, which is very repetitive and annoying. There is a better way, fortunately.
 
 ## beforeEach()
 
@@ -147,13 +147,13 @@ First we need to get all of the `<li>` elements.
 cy.get(".todo-list li")
 ```
 
-Then we want to make sure we grab the first element in this array. We can do that by using the [eq()](https://docs.cypress.io/api/commands/eq) method.
+Then we want to make sure we grab the first element in this array. We can do that by using the <apiLink apiName="eq" displayName=".eq()" /> method.
 
 ```js
 cy.get(".todo-list li").eq(0)
 ```
 
-We then pass `eq()` the index of our element, which should be the first one, and it will return that element from the array.
+We then pass <apiLink apiName="eq" displayName=".eq()" /> the index of our element, which should be the first one, and it will return that element from the array.
 
 Then we will use the [find()](https://docs.cypress.io/api/commands/find) method to find our `<label>` element.
 
@@ -161,7 +161,7 @@ Then we will use the [find()](https://docs.cypress.io/api/commands/find) method 
 cy.get(".todo-list li").eq(0).find("label")
 ```
 
-The `.find()` method will look for child elements of a specific selector.
+The <apiLink apiName="find" displayName=".find()" /> method will look for child elements of a specific selector.
 
 So, we are getting the first `<li>` element from the **.todo-list** element and then within that `<li>` element we are looking for the `<label>` element.
 
