added apiLinks to cypress commands in cypress fundamentals

--- a/content/courses/cypress-fundamentals/command-chaining.mdx
+++ b/content/courses/cypress-fundamentals/command-chaining.mdx
@@ -8,12 +8,12 @@ For example, a chain of Cypress commands looks like this:
 cy.get(".todo-list li").find("label").should("contain", "Buy Milk")
 ```
 
-In this example, `.get()` will yield the `<li>` subject to `.find()` which will then search for the `<label>` element. Finally, we make an assertion that the `<label>` contains the text "Buy Milk."
+In this example, <apiLink apiName="get" displayName="cy.get()" /> will yield the `<li>` subject to <apiLink apiName="find" displayName=".find()" /> which will then search for the `<label>` element. Finally, we make an assertion that the `<label>` contains the text "Buy Milk."
 
-However, it is important to note that not all Cypress commands yield a subject that can be chained. For instance, `cy.clearCookies()` yields `null`, which _cannot_ be chained.
+However, it is important to note that not all Cypress commands yield a subject that can be chained. For instance, <apiLink apiName="clearcookies" displayName="cy.clearCookies()" /> yields `null`, which _cannot_ be chained.
 
-Cypress commands like `.get()` and `.contains()` yield DOM elements that can be chained, like in the example above.
+Cypress commands like <apiLink apiName="get" displayName="cy.get()" /> and <apiLink apiName="contains" displayName="cy.contains()" /> yield DOM elements that can be chained, like in the example above.
 
-When you want to act upon a subject directly from a Cypress command, you need to yield the subject to `.then()`. We cover `.then()` and `.wrap()` in the [Understanding the Asynchronous nature of Cypress](/cypress-fundamentals/understanding-the-asynchronous-nature-of-cypress) lesson.
+When you want to act upon a subject directly from a Cypress command, you need to yield the subject to <apiLink apiName="then" displayName=".then()" />. We cover <apiLink apiName="then" displayName=".then()" /> and <apiLink apiName="wrap" displayName="cy.wrap()" /> in the [Understanding the Asynchronous nature of Cypress](/cypress-fundamentals/understanding-the-asynchronous-nature-of-cypress) lesson.
 
 You can learn more about command chaining from our docs [here](https://docs.cypress.io/guides/core-concepts/introduction-to-cypress#Chains-of-Commands).
