--- a/content/courses/cypress-fundamentals/how-to-debug-failing-tests.mdx
+++ b/content/courses/cypress-fundamentals/how-to-debug-failing-tests.mdx
@@ -18,11 +18,11 @@ For example, in the failing test above, when clicking upon the assertion step, C
 
 When you are running Cypress in headless mode by using the `cypress run` command, screenshots and videos will automatically be recorded anytime there is a failure. This is incredibly useful, especially when running your tests in CI, as it provides you with not only a screenshot at the exact point of failure, but also a video of your failing test.
 
-You can tell Cypress to take a screenshot manually by using the `cy.screenshot()` command. You can find more info about this command [here](https://docs.cypress.io/api/commands/screenshot).
+You can tell Cypress to take a screenshot manually by using the <apiLink apiName="screenshot" displayName="cy.screenshot()" /> command.
 
 ## Logging
 
-There are two useful ways to log information from your tests. One way is to use `cy.log()` the other is to use `console.log()` . Remember [Cypress is just JavaScript](/cypress-fundamentals/cypress-is-just-javascript) so you can leverage all of the helpful debugging techniques you use in JS too.
+There are two useful ways to log information from your tests. One way is to use <apiLink apiName="log" displayName="cy.log()" /> the other is to use `console.log()` . Remember [Cypress is just JavaScript](/cypress-fundamentals/cypress-is-just-javascript) so you can leverage all of the helpful debugging techniques you use in JS too.
 
 [cy.log()](https://docs.cypress.io/api/commands/log) will print a message to the Cypress Command Log
 
