--- a/content/courses/cypress-fundamentals/understanding-the-asynchronous-nature-of-cypress.mdx
+++ b/content/courses/cypress-fundamentals/understanding-the-asynchronous-nature-of-cypress.mdx
@@ -4,7 +4,7 @@ This is arguably one of the most crucial Cypress concepts that you need to under
 
 ## Return vs. Yield
 
-Cypress commands DO NOT `return` their subjects. This means you **cannot** do things like this:
+Cypress commands **DO NOT** return their subjects. This means you **cannot** do things like this:
 
 ```js
 // THIS WILL NOT WORK
@@ -21,9 +21,9 @@ Cypress commands are asynchronous and get queued for execution at a later time. 
 
 ## .then()
 
-So if a command does not **return** a subject but instead **yields** it, how can you interact with the subject directly? You can interact with a subject directly by using [.then()](https://docs.cypress.io/guides/core-concepts/variables-and-aliases#Closures).
+So if a command does not **return** a subject but instead **yields** it, how can you interact with the subject directly? You can interact with a subject directly by using <apiLink apiName="then" displayName=".then()" />.
 
-`.then()` behaves similarly to Promises in JavaScript. However, `.then()` is a Cypress command, **not a Promise**. This means you cannot use things like **async/await** within your Cypress tests.
+`.then()` behaves similarly to Promises in JavaScript. However, <apiLink apiName="then" displayName=".then()" /> is a Cypress command, **not a Promise**. This means you cannot use things like **async/await** within your Cypress tests.
 
 Whatever is returned from the callback function becomes the new subject and will flow into the following command (except for `undefined`).
 
@@ -37,13 +37,13 @@ cy.get("button").then(($btn) => {
 
 When `undefined` is returned by the callback function, the subject will not be modified and will instead carry over to the next command.
 
-Just like Promises, you can return any compatible "thenable" (anything that has a `.then()` interface), and Cypress will wait for that to resolve before continuing forward through the chain of commands.
+Just like Promises, you can return any compatible "thenable" (anything that has a <apiLink apiName="then" displayName=".then()" /> interface), and Cypress will wait for that to resolve before continuing forward through the chain of commands.
 
-If you're familiar with [native Promises](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Using_promises), the Cypress `.then()` works the same way.
+If you're familiar with [native Promises](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Using_promises), the Cypress <apiLink apiName="then" displayName=".then()" /> works the same way.
 
 ## .wrap()
 
-In our example just above, `$btn` is a jQuery object. This means that if we would like Cypress to perform some action upon it, we first need to use `.wrap()` for Cypress to interact with it.
+In our example just above, `$btn` is a jQuery object. This means that if we would like Cypress to perform some action upon it, we first need to use <apiLink apiName="wrap" displayName="cy.wrap()" /> for Cypress to interact with it.
 
 The example continued...
 
@@ -55,9 +55,9 @@ cy.get("button").then(($btn) => {
 })
 ```
 
-In this example, we are first getting the `<button>` HTML element. Our subject, which in this case is the `<button>` HTML element is yielded from `cy.get()` to `.then()`. We can then access the subject as the variable`$btn` , but first need to `.wrap()` it to perform whatever operations or assertions we would like on it.
+In this example, we are first getting the `<button>` HTML element. Our subject, which in this case is the `<button>` HTML element is yielded from <apiLink apiName="get" displayName="cy.get()" /> to <apiLink apiName="then" displayName=".then()" />. We can then access the subject as the variable`$btn` , but first need to `.wrap()` it to perform whatever operations or assertions we would like on it.
 
-Before our assertion, which in this case is `.should('not.have.class', cls)` we first need Cypress to `.click()` the button. For Cypress to click on our `$btn`, we must first wrap it with `.wrap()` to provide the proper context for Cypress to perform the click.
+Before our assertion, which in this case is `.should('not.have.class', cls)` we first need Cypress to <apiLink apiName="click" displayName=".click()" /> the button. For Cypress to click on our `$btn`, we must first wrap it with <apiLink apiName="wrap" displayName="cy.wrap()" /> to provide the proper context for Cypress to perform the click.
 
 We _cannot_ do something like this, because `$btn` is a jQuery object.
 
@@ -65,7 +65,7 @@ We _cannot_ do something like this, because `$btn` is a jQuery object.
 $btn.click().should("not.have.class", cls) // Does not work
 ```
 
-We must use `.wrap()` first, because it provides Cypress the context necessary for interacting with the `$btn`.
+We must use <apiLink apiName="wrap" displayName="cy.wrap()" /> first, because it provides Cypress the context necessary for interacting with the `$btn`.
 
 ```js
 cy.wrap($btn).click().should("not.have.class", cls)
