added apiLinks to cypress commands in advanced cypress concepts

--- a/content/courses/advanced-cypress-concepts/building-the-right-cypress-commands.mdx
+++ b/content/courses/advanced-cypress-concepts/building-the-right-cypress-commands.mdx
@@ -40,7 +40,7 @@ Cypress.Commands.add("getBySel", (selector, ...args) => {
 })
 ```
 
-As you can see, our custom command is a simple wrapper around `cy.get()`. This way, we can pass in the string contained within the **data-test** attribute, and our custom command will return the element.
+As you can see, our custom command is a simple wrapper around <apiLink apiName="get" displayName="cy.get()" />. This way, we can pass in the string contained within the **data-test** attribute, and our custom command will return the element.
 
 ## Another Custom Command Example
 
