--- a/content/courses/advanced-cypress-concepts/integration-and-api-tests.mdx
+++ b/content/courses/advanced-cypress-concepts/integration-and-api-tests.mdx
@@ -26,7 +26,7 @@ context("GET /users", function () {
 })
 ```
 
-In this simple test, we make a **GET** request to our **/users** route using `cy.request()`. We assert that the response returns a **200** status code and that more than one user is returned from the response.
+In this simple test, we make a **GET** request to our **/users** route using <apiLink apiName="request" displayName="cy.request()" />. We assert that the response returns a **200** status code and that more than one user is returned from the response.
 
 ## Developer Experience
 
